--- a/templates/code_analysis/java_metric_tooltip.html
+++ b/templates/code_analysis/java_metric_tooltip.html
@@ -13,7 +13,7 @@
 {% elif name == 'duplicate_code' %}
     Shows the percentage of repeated code. Less duplication is better for maintainability.
 {% elif name == 'comment_density' %}
-    Number of comment lines in your Java code. Comments help explain logic and improve maintainability.
+    Number of comment lines in your Java code. Too few may reduce clarity; too many may indicate poor self-documenting code..
 {% elif name == 'readability_score' %}
     A computed score estimating how easy your code is to read. Higher values indicate better readability.
 {% elif name == 'complexity_score' %}
