--- a/templates/complexityC_form.html
+++ b/templates/complexityC_form.html
@@ -358,6 +358,7 @@
         {% endif %}
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.45.0/min/vs/loader.min.js"></script>
     <script>
         function toggleTable(id) {
             var content = document.getElementById("table-" + id);
